[gd_scene load_steps=44 format=3 uid="uid://bgfl4ut0c54t8"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_e5fsk"]
[ext_resource type="Texture2D" uid="uid://b4edxm440muh8" path="res://Assets/Sprite-0001-Recovered3.png" id="2_8otrx"]
[ext_resource type="Texture2D" uid="uid://bhan4y82hui0i" path="res://Assets/dogattack1.png" id="2_a46s6"]
[ext_resource type="Texture2D" uid="uid://c3ggb0buwjube" path="res://Assets/dogattack2.png" id="3_2a837"]
[ext_resource type="Texture2D" uid="uid://cbcmkmil2q2ql" path="res://Assets/Sprite-0001-Recovered2.png" id="3_wbr7v"]
[ext_resource type="Texture2D" uid="uid://fjlm54t28y6i" path="res://Assets/dogdeath1.png" id="4_5u464"]
[ext_resource type="Texture2D" uid="uid://x4jkevc7a7e" path="res://Assets/bone.png" id="5_07daj"]
[ext_resource type="Texture2D" uid="uid://dsuyrlmgb4igc" path="res://Assets/dogdeath2.png" id="5_fjpa2"]
[ext_resource type="Texture2D" uid="uid://55j3rrvbi4rf" path="res://Assets/dogdeath3.png" id="6_f0egh"]
[ext_resource type="Texture2D" uid="uid://2p0cdbqre6c4" path="res://Assets/dogdeath4.png" id="7_brj5m"]
[ext_resource type="Texture2D" uid="uid://nu62jqhq4e8n" path="res://Assets/dogidlke1.png" id="8_kt8ap"]
[ext_resource type="Texture2D" uid="uid://cgw4ld6dcssxk" path="res://Assets/dogidlke2.png" id="9_d8rrl"]
[ext_resource type="Texture2D" uid="uid://be40qcbfs6dt1" path="res://Assets/dogjump1.png" id="10_23cx2"]
[ext_resource type="Texture2D" uid="uid://2cuki752n4c4" path="res://Assets/dogjump2.png" id="11_6pi5b"]
[ext_resource type="Texture2D" uid="uid://4utqgb7yt6j7" path="res://Assets/dogjump3.png" id="12_gw0py"]
[ext_resource type="Texture2D" uid="uid://df170sllrij3l" path="res://Assets/dogjump4.png" id="13_rjcrm"]
[ext_resource type="Texture2D" uid="uid://sata1xa1y073" path="res://Assets/dogswim1.png" id="14_m8mtt"]
[ext_resource type="Texture2D" uid="uid://cplabophgfjnx" path="res://Assets/dogswim2.png" id="15_frwkh"]
[ext_resource type="Texture2D" uid="uid://bu6qte7bdpn54" path="res://Assets/dogswim3.png" id="16_u30kt"]
[ext_resource type="FontFile" uid="uid://cbqxfolwklsky" path="res://Assets/QuinqueFive.otf" id="19_hu1xv"]
[ext_resource type="Script" path="res://Scripts/Treats.gd" id="19_oaqum"]
[ext_resource type="Texture2D" uid="uid://ct7dx67yam2db" path="res://Assets/watertub.png" id="20_3gms5"]
[ext_resource type="AudioStream" uid="uid://bbqn6pk415gvo" path="res://Assets/8bit-music-for-game-68698.mp3" id="21_qgua4"]
[ext_resource type="Texture2D" uid="uid://ds8bvptbstloa" path="res://Assets/catdeath2.png" id="21_xy6c5"]
[ext_resource type="AudioStream" uid="uid://cn5icgtye7kyl" path="res://Assets/kl-peach-game-over-iii-142453.mp3" id="22_6mnt1"]
[ext_resource type="Texture2D" uid="uid://vjvvu3wlt54a" path="res://Assets/catclimb1.png" id="22_37y6d"]
[ext_resource type="Texture2D" uid="uid://b4ivw27p50o5a" path="res://Assets/dogkeys.png" id="27_tmjin"]
[ext_resource type="Texture2D" uid="uid://bmpvsgya6namw" path="res://Assets/catidle1.png" id="28_56g0h"]
[ext_resource type="Texture2D" uid="uid://sl7wiq1khjr0" path="res://Assets/cat keys.png" id="29_jlmg2"]
[ext_resource type="Texture2D" uid="uid://d33ovy43cwflf" path="res://Assets/special keys.png" id="30_icv78"]
[ext_resource type="Texture2D" uid="uid://dmyx0apjvh3bg" path="res://Assets/dogbowl.png" id="31_cdx6q"]
[ext_resource type="Texture2D" uid="uid://fi8rlgd1h5c7" path="res://Assets/vacuum.png" id="32_atcrv"]
[ext_resource type="Texture2D" uid="uid://hx25yc1wambb" path="res://Assets/ghost.png" id="33_vjx6s"]
[ext_resource type="Texture2D" uid="uid://dt0nwvoc51ojf" path="res://Assets/ladder.png" id="34_8nm2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_353vg"]
size = Vector2(23, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_fwyh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a46s6")
}, {
"duration": 1.0,
"texture": ExtResource("3_2a837")
}],
"loop": false,
"name": &"dog_attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5u464")
}, {
"duration": 1.1,
"texture": ExtResource("5_fjpa2")
}, {
"duration": 1.0,
"texture": ExtResource("6_f0egh")
}, {
"duration": 1.0,
"texture": ExtResource("7_brj5m")
}],
"loop": false,
"name": &"dog_death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_kt8ap")
}, {
"duration": 1.0,
"texture": ExtResource("9_d8rrl")
}],
"loop": false,
"name": &"dog_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_23cx2")
}, {
"duration": 1.0,
"texture": ExtResource("11_6pi5b")
}, {
"duration": 1.0,
"texture": ExtResource("12_gw0py")
}, {
"duration": 1.0,
"texture": ExtResource("13_rjcrm")
}],
"loop": false,
"name": &"dog_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_m8mtt")
}, {
"duration": 1.0,
"texture": ExtResource("15_frwkh")
}, {
"duration": 1.0,
"texture": ExtResource("16_u30kt")
}],
"loop": false,
"name": &"dog_swim",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8otrx")
}, {
"duration": 1.0,
"texture": ExtResource("3_wbr7v")
}],
"loop": false,
"name": &"dog_walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnchj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y0y1r"]
radius = 12.0

[sub_resource type="Theme" id="Theme_p6f27"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_jbiu6"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_yb28x"]
default_font_size = 25

[sub_resource type="Animation" id="Animation_g8sku"]
resource_name = "ui_visibility"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cw1p"]
_data = {
"ui_visibility": SubResource("Animation_g8sku")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_e5fsk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 3)
shape = SubResource("RectangleShape2D_353vg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -1)
sprite_frames = SubResource("SpriteFrames_fwyh0")
animation = &"dog_walk"
frame = 1
frame_progress = 1.0

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(4, 3)
shape = SubResource("RectangleShape2D_mnchj")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(30, -1)
shape = SubResource("CircleShape2D_y0y1r")

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Menu" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.435294, 0.972549, 1)

[node name="Container" type="ColorRect" parent="GameOver/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 27.0
offset_right = -39.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.403922, 0.560784, 1, 1)

[node name="Border" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501961, 0.670588, 1, 1)

[node name="Label" type="Label" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = 80.0
offset_right = 252.0
offset_bottom = 122.0
grow_horizontal = 2
theme = SubResource("Theme_p6f27")
theme_override_colors/font_color = Color(0.560784, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.678431, 0, 0.172549, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0, 0.0745098, 1)
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 40
text = "you died!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TimeCompleted" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="GameOver/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 223.0
offset_top = 7.0
offset_right = 559.0
offset_bottom = 48.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 35
text = "Time: "

[node name="Label2" type="Label" parent="GameOver/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -607.0
offset_top = 7.0
offset_right = -197.0
offset_bottom = 43.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 30
text = "0	"

[node name="RestartButtonGameOver" type="Button" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 248.0
offset_top = -298.0
offset_right = 829.0
offset_bottom = -208.0
grow_vertical = 0
theme = SubResource("Theme_jbiu6")
theme_override_fonts/font = ExtResource("19_hu1xv")
text = "Restart"

[node name="MenuButton" type="Button" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 251.0
offset_top = -199.0
offset_right = 826.0
offset_bottom = -109.0
grow_vertical = 0
theme = SubResource("Theme_yb28x")
theme_override_fonts/font = ExtResource("19_hu1xv")
text = "Menu"

[node name="Sprite2D" type="Sprite2D" parent="GameOver"]
position = Vector2(149, 566)
scale = Vector2(3.625, 2.79688)
texture = ExtResource("20_3gms5")

[node name="Sprite2D2" type="Sprite2D" parent="GameOver"]
position = Vector2(175.5, 405.625)
scale = Vector2(7.15625, 6.89844)
texture = ExtResource("21_xy6c5")

[node name="Sprite2D3" type="Sprite2D" parent="GameOver"]
position = Vector2(982, 510)
scale = Vector2(7.15625, 6.89844)
texture = ExtResource("6_f0egh")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="Menu" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.25098, 0.25098, 1)

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Menu"]
layout_mode = 0
offset_left = 35.0
offset_top = 25.0
offset_right = 1113.0
offset_bottom = 605.0
color = Color(0.588235, 0.270588, 0.270588, 1)

[node name="Label" type="Label" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 268.0
offset_top = 85.0
offset_right = 808.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 45
text = "Pause Menu"

[node name="ButtonResume" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 284.0
offset_top = 198.0
offset_right = 784.0
offset_bottom = 278.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 30
text = "Resume Level"

[node name="ButtonSave" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 284.0
offset_top = 292.0
offset_right = 784.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 30
text = "Save Level"

[node name="ButtonLoad" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 285.0
offset_top = 385.0
offset_right = 785.0
offset_bottom = 465.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 30
text = "Load Level"

[node name="ButtonQuit" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 284.0
offset_top = 478.0
offset_right = 784.0
offset_bottom = 558.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 30
text = "Quit Game"

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu"]
position = Vector2(983.75, 207)
scale = Vector2(5.39062, 5.125)
texture = ExtResource("13_rjcrm")

[node name="Sprite2D2" type="Sprite2D" parent="PauseMenu"]
position = Vector2(199, 520)
scale = Vector2(6.17187, 5.40625)
texture = ExtResource("22_37y6d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_0cw1p")
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="Treats" type="ColorRect" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 122.0
offset_bottom = 60.0
color = Color(0.0509804, 0.0509804, 0.0509804, 0.705882)
script = ExtResource("19_oaqum")

[node name="Sprite2D" type="Sprite2D" parent="UI/Treats"]
position = Vector2(18, 1)
scale = Vector2(1.10156, 1.07031)
texture = ExtResource("5_07daj")

[node name="Label" type="Label" parent="UI/Treats"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -23.0
offset_right = 4.0
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 1

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_qgua4")
volume_db = -80.0

[node name="PauseMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_6mnt1")
volume_db = -80.0

[node name="Instructions" type="Popup" parent="."]
process_mode = 3
size = Vector2i(1152, 648)

[node name="Menu" type="ColorRect" parent="Instructions"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.290196, 0.223529, 1)

[node name="Container" type="ColorRect" parent="Instructions/Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1080.0
offset_bottom = 580.0
color = Color(0.147267, 0.486446, 0.381743, 1)

[node name="Label" type="Label" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 300.0
offset_top = 20.0
offset_right = 840.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("19_hu1xv")
text = "Game Instructions:"

[node name="AcceptButton" type="Button" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 950.0
offset_right = 1000.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 26
text = "x"

[node name="ColorRect" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 88.0
offset_right = 90.0
offset_bottom = 88.0

[node name="Sprite2D" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect"]
position = Vector2(-40, 5)
texture = ExtResource("4_5u464")

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect"]
position = Vector2(310, 15)
texture = ExtResource("27_tmjin")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "To move Rosie  use the            arrow keys, shift for attack and space to jump"
horizontal_alignment = 2

[node name="ColorRect2" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 150.0
offset_right = 90.0
offset_bottom = 150.0

[node name="Sprite2D" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect2"]
position = Vector2(-35, 0)
texture = ExtResource("28_56g0h")

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect2"]
position = Vector2(310, 5)
texture = ExtResource("29_jlmg2")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "To move Frinici use the            WASD keys, Q for attack and E to jump"
horizontal_alignment = 2

[node name="ColorRect3" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 210.0
offset_right = 90.0
offset_bottom = 210.0

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect3"]
position = Vector2(330, 30)
texture = ExtResource("30_icv78")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "For special keys use the           esc and P key for pause menu"
horizontal_alignment = 2

[node name="ColorRect4" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 260.0
offset_right = 90.0
offset_bottom = 260.0

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect4"]
position = Vector2(-40, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("31_cdx6q")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "The goal is to get each pet to the bowls at the end of the level"
horizontal_alignment = 2

[node name="ColorRect5" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 310.0
offset_right = 90.0
offset_bottom = 310.0

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect5"]
position = Vector2(-40, -4)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_07daj")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "collect as many bones as possible"
horizontal_alignment = 2

[node name="ColorRect6" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 360.0
offset_right = 90.0
offset_bottom = 360.0

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "The pets can kill what they arent afraid of"
horizontal_alignment = 2

[node name="ColorRect7" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 410.0
offset_right = 90.0
offset_bottom = 410.0

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect7"]
position = Vector2(-30, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("32_atcrv")

[node name="Sprite2D3" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect7"]
position = Vector2(335, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("33_vjx6s")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect7"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "Frinci is afraid of Vacuums        Rosie is afraid of GHosts"
horizontal_alignment = 2

[node name="ColorRect8" type="ColorRect" parent="Instructions/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 460.0
offset_right = 90.0
offset_bottom = 460.0

[node name="Sprite2D2" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect8"]
position = Vector2(-25, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("34_8nm2v")

[node name="Sprite2D3" type="Sprite2D" parent="Instructions/Menu/Container/ColorRect8"]
position = Vector2(295, 5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("20_3gms5")

[node name="Label" type="Label" parent="Instructions/Menu/Container/ColorRect8"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 9
text = "Frinci can climb ladders       Rosie can swim in water"
horizontal_alignment = 2

[node name="Story" type="Popup" parent="."]
process_mode = 3
size = Vector2i(1152, 648)

[node name="Menu" type="ColorRect" parent="Story"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.14902, 0.545098, 1)

[node name="Container" type="ColorRect" parent="Story/Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1080.0
offset_bottom = 580.0
color = Color(0.356863, 0.388235, 0.682353, 1)

[node name="Label" type="Label" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 400.0
offset_top = 40.0
offset_right = 940.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 33
text = "Oh No!"

[node name="NarrativeButton" type="Button" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 950.0
offset_right = 1000.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 26
text = "x"

[node name="ColorRect" type="ColorRect" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 120.0
offset_right = 90.0
offset_bottom = 120.0

[node name="Sprite2D" type="Sprite2D" parent="Story/Menu/Container/ColorRect"]
position = Vector2(-40, 5)
texture = ExtResource("4_5u464")

[node name="Label" type="Label" parent="Story/Menu/Container/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 15
text = "Frinci and Rosie's Treat Bag has gone missing!


"
horizontal_alignment = 2

[node name="ColorRect2" type="ColorRect" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 180.0
offset_right = 90.0
offset_bottom = 180.0

[node name="Sprite2D" type="Sprite2D" parent="Story/Menu/Container/ColorRect2"]
position = Vector2(-35, 0)
texture = ExtResource("28_56g0h")

[node name="Label" type="Label" parent="Story/Menu/Container/ColorRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 15
text = "Their Treats are strewn about the house help them"
horizontal_alignment = 2

[node name="ColorRect3" type="ColorRect" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 250.0
offset_right = 90.0
offset_bottom = 250.0

[node name="Label" type="Label" parent="Story/Menu/Container/ColorRect3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 15
text = "fill their treat bag by helping them collect"
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="Story/Menu/Container/ColorRect3"]
position = Vector2(-40, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_07daj")

[node name="ColorRect4" type="ColorRect" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 320.0
offset_right = 90.0
offset_bottom = 320.0

[node name="Sprite2D2" type="Sprite2D" parent="Story/Menu/Container/ColorRect4"]
position = Vector2(-40, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("31_cdx6q")

[node name="Label" type="Label" parent="Story/Menu/Container/ColorRect4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("19_hu1xv")
theme_override_font_sizes/font_size = 15
text = "Treats in every room!"
horizontal_alignment = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="GameOver/Menu/Container/RestartButtonGameOver" to="." method="_on_restart_button_game_over_pressed"]
[connection signal="pressed" from="GameOver/Menu/Container/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Instructions/Menu/Container/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="Story/Menu/Container/NarrativeButton" to="." method="_on_narrative_button_pressed"]
